[tool.poetry]
name = "rp-poetry"
version = "0.1.0"
description = ""
authors = ["Pas Apicella <pas.apicella@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
black = "^21.12b0"
beautifulsoup4 = "^4.10.0"
Flask = "^2.0.2"
django-debug-toolbar = "1.4"
Django = "1.9.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
